--- a/configs/sam9x75_curiositysd_linux_fastboot_ext4_defconfig
+++ b/configs/sam9x75_curiositysd_linux_fastboot_ext4_defconfig
@@ -12,7 +12,7 @@ CONFIG_ARG_MEMTEST=""
 CONFIG_ARG_MTD=""
 CONFIG_ARG_PRINTK=""
 CONFIG_ARG_ROOTFSTYPE=" rootfstype=ext4"
-CONFIG_ARG_RW=" rw quiet"
+CONFIG_ARG_RW=" rw clk_ignore_unused quiet"
 CONFIG_UNC_IMAGE=y
 CONFIG_OF_OVERRIDE_DTB_NAME="at91-sam9x75_curiosity.dtb"
 CONFIG_OF_ADDRESS="0x22000000"
