--- a/configs/sam9x75_curiositysd_linux_fastboot_ext4_dualboot_defconfig
+++ b/configs/sam9x75_curiositysd_linux_fastboot_ext4_dualboot_defconfig
@@ -7,12 +7,13 @@ CONFIG_SDHC_EMMC_HS_DDR=y
 CONFIG_SDHC_ASYNC_READ=y
 CONFIG_LOAD_LINUX=y
 CONFIG_OVERRIDE_CMDLINE=y
+CONFIG_ARG_CMA=" cma=128m"
 CONFIG_ARG_DELAY=""
 CONFIG_ARG_MEMTEST=""
 CONFIG_ARG_MTD=""
 CONFIG_ARG_PRINTK=""
 CONFIG_ARG_ROOTFSTYPE=" rootfstype=ext4"
-CONFIG_ARG_RW=" rw clk_ignore_unused quiet"
+CONFIG_ARG_ROOTWAIT=" rootwait clk_ignore_unused quiet"
 CONFIG_UNC_IMAGE=y
 CONFIG_OF_OVERRIDE_DTB_NAME="at91-sam9x75_curiosity.dtb"
 CONFIG_OF_ADDRESS="0x22000000"
